--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/SettingsPanelFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/SettingsPanelFlyout.xaml
@@ -6,6 +6,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:inheritedControls="using:Brainf_ck_sharp_UWP.UserControls.InheritedControls"
     xmlns:ideThemes="using:Brainf_ck_sharp_UWP.UserControls.DataTemplates.IDEThemes"
+    xmlns:helpers="using:Brainf_ck_sharp_UWP.Helpers"
     mc:Ignorable="d"
     d:DesignHeight="800"
     d:DesignWidth="400">
@@ -87,12 +88,23 @@
             ItemContainerStyle="{StaticResource ComboBoxWithoutSelectedVisualStatesStyle}"
             MinWidth="180"
             MinHeight="108"
-            Padding="1,0,0,1">
-            <inheritedControls:AnimatedComboBox.ItemTemplate>
-                <DataTemplate>
-                    <ideThemes:IDEThemePreviewTemplate Theme="{Binding}"/>
-                </DataTemplate>
-            </inheritedControls:AnimatedComboBox.ItemTemplate>
+            Padding="1,1,0,1">
+            <inheritedControls:AnimatedComboBox.ItemTemplateSelector>
+                <helpers:ComboBoxDataTemplateSelector>
+                    <helpers:ComboBoxDataTemplateSelector.SelectedTemplate>
+                        <DataTemplate>
+                            <ideThemes:IDEThemePreviewTemplate Theme="{Binding}"/>
+                        </DataTemplate>
+                    </helpers:ComboBoxDataTemplateSelector.SelectedTemplate>
+                    <helpers:ComboBoxDataTemplateSelector.DropDownTemplate>
+                        <DataTemplate>
+                            <ideThemes:IDEThemeDropDownPreviewTemplate 
+                                MinWidth="180"
+                                Theme="{Binding}"/>
+                        </DataTemplate>
+                    </helpers:ComboBoxDataTemplateSelector.DropDownTemplate>
+                </helpers:ComboBoxDataTemplateSelector>
+            </inheritedControls:AnimatedComboBox.ItemTemplateSelector>
         </inheritedControls:AnimatedComboBox>
     </StackPanel>
 </UserControl>
