Added in-app IDE UI refresh when changing theme

--- a/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
@@ -356,7 +356,7 @@
                     Label="Settings"
                     x:Uid="SettingsButton"
                     Icon="&#xE115;"
-                    Click="ToggleBlurModeButton_Click"/>
+                    Click="SettingsButton_Click"/>
                 <customCommandBar:CustomCommandBarButton
                     Style="{StaticResource SecondaryAppBarButtonWithLightEffect}"
                     Label="About"
