--- a/Brainf_ck-sharp.UWP/Views/IDEView.xaml
+++ b/Brainf_ck-sharp.UWP/Views/IDEView.xaml
@@ -302,23 +302,6 @@
             </Grid.Clip>
             <Canvas x:Name="BracketGuidesCanvas"/>
         </Grid>
-
-        <!--Code box-->
-        <inheritedControls:RichEditBoxWithVerticalOffsetInfo
-            Grid.Column="4"
-            Style="{StaticResource TransparentEditBox}"
-            x:Name="EditBox"
-            TextWrapping="NoWrap"
-            IsSpellCheckEnabled="False"
-            IsTextPredictionEnabled="False"
-            ClipboardCopyFormat="PlainText"
-            TextChanged="EditBox_OnTextChanged"
-            SelectionChanged="EditBox_OnSelectionChanged"
-            KeyDown="EditBox_OnKeyDown"
-            GotFocus="EditBox_OnGotFocus"
-            LostFocus="EditBox_OnLostFocus"
-            Paste="EditBox_OnPaste"
-            Margin="0"/>
         
         <!--Current line cursor-->
         <Canvas 
@@ -343,7 +326,8 @@
             </Border>
             
             <!--Virtual cursor-->
-            <Rectangle 
+            <Rectangle
+                Canvas.ZIndex="1"
                 Width="1"
                 Height="20"
                 Fill="LightGray"
@@ -353,5 +337,22 @@
                 </Rectangle.RenderTransform>
             </Rectangle>
         </Canvas>
+
+        <!--Code box-->
+        <inheritedControls:RichEditBoxWithVerticalOffsetInfo
+            Grid.Column="4"
+            Style="{StaticResource TransparentEditBox}"
+            x:Name="EditBox"
+            TextWrapping="NoWrap"
+            IsSpellCheckEnabled="False"
+            IsTextPredictionEnabled="False"
+            ClipboardCopyFormat="PlainText"
+            TextChanged="EditBox_OnTextChanged"
+            SelectionChanged="EditBox_OnSelectionChanged"
+            KeyDown="EditBox_OnKeyDown"
+            GotFocus="EditBox_OnGotFocus"
+            LostFocus="EditBox_OnLostFocus"
+            Paste="EditBox_OnPaste"
+            Margin="0"/>
     </Grid>
 </UserControl>
