IDE theme preview template updated

--- a/Brainf_ck-sharp.UWP/UserControls/DataTemplates/IDEThemes/IDEThemePreviewTemplate.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/DataTemplates/IDEThemes/IDEThemePreviewTemplate.xaml
@@ -48,15 +48,56 @@
                 TextAlignment="Right"
                 TextTrimming="CharacterEllipsis"
                 Foreground="#FF237CAD"
-                x:Name="LineNumbersBlock">
+                x:Name="LineNumbersBlock"
+                Margin="0,1,0,0">
                 <Run Text="1"/><LineBreak/>
                 <Run Text="2"/><LineBreak/>
                 <Run Text="3"/><LineBreak/>
                 <Run Text="4"/>
             </TextBlock>
-            
+
+            <!--Vertical guide-->
+            <Line
+                Canvas.ZIndex="0"
+                Grid.Column="2"
+                Width="1"
+                StrokeThickness="1"
+                Height="20"
+                Margin="20,0,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Y1="0"
+                Y2="20"
+                StrokeDashArray="4"
+                Stroke="#FFD3D3D3"
+                x:Name="BracketsGuide">
+                <Line.RenderTransform>
+                    <TranslateTransform
+                        X="2"
+                        Y="22"/>
+                </Line.RenderTransform>
+            </Line>
+
+            <!--Line highlight-->
+            <Border
+                Canvas.ZIndex="1"
+                Grid.Column="2"
+                Height="20"
+                VerticalAlignment="Top"
+                Margin="8,0,0,0"
+                BorderThickness="2"
+                BorderBrush="#30FFFFFF"
+                x:Name="LineHighlightBorder">
+                <Border.RenderTransform>
+                    <TranslateTransform 
+                        x:Name="LineHighlightTransform"
+                        Y="22"/>
+                </Border.RenderTransform>
+            </Border>
+
             <!--Code sample-->
             <TextBlock
+                Canvas.ZIndex="2"
                 IsTextScaleFactorEnabled="False"
                 Margin="20,0,20,0"
                 Grid.Column="2"
@@ -105,27 +146,6 @@
                     x:Name="CommentRun2"
                     x:Uid="CommentRun2"/>
             </TextBlock>
-            
-            <!--Vertical guide-->
-            <Line
-                Grid.Column="2"
-                Width="1"
-                StrokeThickness="1"
-                Height="20"
-                Margin="20,0,0,0"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Y1="0"
-                Y2="20"
-                StrokeDashArray="4"
-                Stroke="#FFD3D3D3"
-                x:Name="BracketsGuide">
-                <Line.RenderTransform>
-                    <TranslateTransform
-                        X="2"
-                        Y="22"/>
-                </Line.RenderTransform>
-            </Line>
         </Grid>
     </StackPanel>
 </UserControl>
