--- a/Brainf_ck-sharp.UWP/UserControls/BottomEdgeInfoBar.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/BottomEdgeInfoBar.xaml
@@ -25,6 +25,8 @@
 
         <!--Visual states-->
         <VisualStateManager.VisualStateGroups>
+            
+            <!--General UI states-->
             <VisualStateGroup>
                 <VisualState x:Name="ConsoleState">
                     <VisualState.Setters>
@@ -109,6 +111,8 @@
                     </VisualState.Setters>
                 </VisualState>
             </VisualStateGroup>
+            
+            <!--Breakpoint states-->
             <VisualStateGroup>
                 <VisualState x:Name="BreakpointsDefaultStatus">
                     <VisualState.Setters>
@@ -121,6 +125,24 @@
                     <VisualState.Setters>
                         <Setter 
                             Target="BreakpointErrorGrid.Visibility"
+                            Value="Visible"/>
+                    </VisualState.Setters>
+                </VisualState>
+            </VisualStateGroup>
+
+            <!--IDE pending changes states-->
+            <VisualStateGroup>
+                <VisualState x:Name="IDENoPendingChangesState">
+                    <VisualState.Setters>
+                        <Setter 
+                            Target="IDEChangesPendingIcon.Visibility"
+                            Value="Collapsed"/>
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="IDEPendingChangesState">
+                    <VisualState.Setters>
+                        <Setter 
+                            Target="IDEChangesPendingIcon.Visibility"
                             Value="Visible"/>
                     </VisualState.Setters>
                 </VisualState>
@@ -248,13 +270,14 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
             <TextBlock 
                 Text="&#xE70B;"
                 FontFamily="Segoe MDL2 Assets"
                 VerticalAlignment="Center"
                 Foreground="White"
-                FontSize="14"
+                FontSize="16"
                 Margin="0,2,0,0"/>
             <TextBlock 
                 Foreground="White"
@@ -269,6 +292,16 @@
                 TextTrimming="CharacterEllipsis"
                 FontWeight="SemiLight"
                 MaxLines="1"/>
+            <TextBlock
+                Visibility="Collapsed"
+                x:Name="IDEChangesPendingIcon"
+                Grid.Column="2"
+                Text="&#xE1F5;"
+                FontFamily="Segoe MDL2 Assets"
+                VerticalAlignment="Center"
+                Foreground="#E0FFFFFF"
+                FontSize="16"
+                Margin="8,2,0,0"/>
         </Grid>
     </Grid>
 </UserControl>
