Fixed the loading popup hit test area

--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/LoadingPopupControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/LoadingPopupControl.xaml
@@ -9,7 +9,7 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <Grid>
+    <Grid Background="Transparent">
         <xaml:CanvasControl
             Opacity="0"
             IsHitTestVisible="False"
