Added base control characters renderer

--- a/Brainf_ck-sharp.UWP/Views/IDEView.xaml
+++ b/Brainf_ck-sharp.UWP/Views/IDEView.xaml
@@ -292,6 +292,12 @@
             IsHitTestVisible="False"
             SizeChanged="BreakLinesCanvas_OnSizeChanged"/>
 
+        <!--Whitespace indicators-->
+        <Canvas
+            Grid.Column="4"
+            x:Name="WhitespacesCanvas"
+            IsHitTestVisible="False"/>
+
         <!--Canvas with the column guides-->
         <Grid
             Grid.Column="4"
