--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/SettingsPanelFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/SettingsPanelFlyout.xaml
@@ -143,12 +143,18 @@
                     <helpers:ComboBoxDataTemplateSelector>
                         <helpers:ComboBoxDataTemplateSelector.SelectedTemplate>
                             <DataTemplate>
-                                <ideThemes:IDEThemePreviewTemplate Theme="{Binding}"/>
+                                <ideThemes:IDEThemePreviewTemplate 
+                                    MinWidth="180"
+                                    MinHeight="108"
+                                    Theme="{Binding}"/>
                             </DataTemplate>
                         </helpers:ComboBoxDataTemplateSelector.SelectedTemplate>
                         <helpers:ComboBoxDataTemplateSelector.DropDownTemplate>
                             <DataTemplate>
-                                <ideThemes:IDEThemeDropDownPreviewTemplate Theme="{Binding}"/>
+                                <ideThemes:IDEThemeDropDownPreviewTemplate 
+                                    MinWidth="180"
+                                    MinHeight="108"
+                                    Theme="{Binding}"/>
                             </DataTemplate>
                         </helpers:ComboBoxDataTemplateSelector.DropDownTemplate>
                     </helpers:ComboBoxDataTemplateSelector>
