--- a/Brainf_ck-sharp.UWP/Styles/TextStyles.xaml
+++ b/Brainf_ck-sharp.UWP/Styles/TextStyles.xaml
@@ -306,8 +306,7 @@
                                 Background="{TemplateBinding Background}"
                                 BorderBrush="{TemplateBinding BorderBrush}"
                                 BorderThickness="{TemplateBinding BorderThickness}"
-                                Grid.ColumnSpan="2"
-                                Grid.RowSpan="1" />
+                                Grid.ColumnSpan="2"/>
                         <ScrollViewer Grid.Row="1"
                                       x:Name="ContentScroller"
                                       HorizontalScrollMode="{TemplateBinding ScrollViewer.HorizontalScrollMode}"
