--- a/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
@@ -66,6 +66,13 @@
                     VerticalAlignment="Center"/>
             </Grid>
             
+            <!--Status bar placeholder-->
+            <Grid
+                Grid.Row="0"
+                Height="24"
+                Visibility="Collapsed"
+                x:Name="StatusBarPlaceholder"/>
+            
             <!--Header with pivot buttons-->
             <header:HeaderControl
                 Grid.Row="1"
